<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <apps.projectegy.sanay3ytrend.utils.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/choose_image_method"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />


        <apps.projectegy.sanay3ytrend.utils.RegularTextView
            android:id="@+id/take_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/take_a_picture"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/black" />

        <apps.projectegy.sanay3ytrend.utils.RegularTextView
            android:id="@+id/photo_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/photo_album"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />


        <apps.projectegy.sanay3ytrend.utils.BoldButton
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@color/colorAccent"
            android:text="@string/cancel"
            android:textColor="@color/white" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>