<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <apps.projectegy.sanay3ytrend.utils.BoldTextView
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/blue_radius_shape"
        android:drawableStart="@drawable/ic_loc_main_color"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/address"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:id="@+id/locationMarker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="vertical">

        <apps.projectegy.sanay3ytrend.utils.RegularTextView
            android:id="@+id/locationMarkertextAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/_4sdp"
            android:text="@string/click_ok"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/_12ssp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageMarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_pin" />
    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/current_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_100sdp"
        android:background="@drawable/blue_radius_shape"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_15sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingBottom="@dimen/_5sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            app:srcCompat="@drawable/ic_gps"
            tools:ignore="VectorDrawableCompat" />

        <apps.projectegy.sanay3ytrend.utils.RegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/_4sdp"
            android:text="@string/select_my_current"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/_12ssp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <apps.projectegy.sanay3ytrend.utils.BoldButton
        android:id="@+id/doneMarker"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="@drawable/login_radius_blue_shape"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold" />

</FrameLayout>