<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:scaleType="fitXY"
        android:src="@drawable/login_top" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:fillViewport="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:background="@drawable/white_radius_shape"
                android:elevation="@dimen/_18sdp"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_10sdp">

                <apps.projectegy.sanay3ytrend.utils.BoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_13ssp" />

                <apps.projectegy.sanay3ytrend.utils.BoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:gravity="center"
                    android:text="@string/send_the_confirmation_code"
                    android:textColor="#7D7D7D"
                    android:textSize="@dimen/_11ssp" />

                <apps.projectegy.sanay3ytrend.utils.BoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:gravity="center"
                    android:text="@string/enter_the_verification_code_sent_on"
                    android:textColor="#909090"
                    android:textSize="@dimen/_10ssp" />

                <apps.projectegy.sanay3ytrend.utils.BoldTextView
                    android:id="@+id/phone_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:gravity="center"
                    android:text=""
                    android:visibility="gone"
                    android:textColor="#242E42"
                    android:textSize="@dimen/_11ssp" />

                <apps.projectegy.sanay3ytrend.utils.RegularEditText
                    android:id="@+id/et_phone"
                    style="@style/edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:cursorVisible="true"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/_10ssp" />

                <apps.projectegy.sanay3ytrend.utils.RegularTextView
                    android:id="@+id/btn_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:background="@drawable/btn_bg_main_color_smooth_border"
                    android:cursorVisible="true"
                    android:gravity="center"
                    android:paddingStart="@dimen/_25sdp"
                    android:paddingTop="@dimen/_7sdp"
                    android:paddingEnd="@dimen/_25sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:text="@string/send"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <apps.projectegy.sanay3ytrend.utils.BoldTextView
                        android:id="@+id/resend_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="@dimen/_3sdp"
                        android:text="@string/resend_code"
                        android:visibility="gone"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_11ssp" />

                    <apps.projectegy.sanay3ytrend.utils.BoldTextView
                        android:id="@+id/timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="@dimen/_3sdp"
                        android:text="00:05"
                        android:visibility="gone"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/txt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <apps.projectegy.sanay3ytrend.utils.BoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/i_remembered_the_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_11ssp" />
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/back_lin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:visibility="visible">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            app:srcCompat="@drawable/ic_arrow_back"
            tools:ignore="VectorDrawableCompat" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>